[gd_scene load_steps=9 format=3 uid="uid://c80n1scsjner4"]

[ext_resource type="Script" uid="uid://lxg52782mjku" path="res://UI/UI.gd" id="1_ddrgo"]
[ext_resource type="PackedScene" uid="uid://bau4fu1mpu7pp" path="res://UI/Background/Background.tscn" id="2_d050y"]
[ext_resource type="PackedScene" uid="uid://bf3y2jmqc0hgk" path="res://UI/PlayerOverlay/HealthOverlay/HealthOverlay.tscn" id="3_d050y"]
[ext_resource type="PackedScene" uid="uid://bugy62uxcxi52" path="res://UI/MainMenu/MainMenu.tscn" id="4_byuxr"]
[ext_resource type="PackedScene" uid="uid://yxg1n6jbh50y" path="res://UI/PlayerOverlay/HelpOverlay/HelpOverlay.tscn" id="4_d050y"]
[ext_resource type="PackedScene" uid="uid://jgl7q1qs2evg" path="res://UI/GameOverMenu/GameOverMenu.tscn" id="4_e707p"]
[ext_resource type="PackedScene" uid="uid://bb1j8gc71nsxn" path="res://UI/HelpMenu/HelpMenu.tscn" id="4_f1fl4"]
[ext_resource type="PackedScene" uid="uid://m3mbkkkty30" path="res://UI/CreditsMenu/CreditsMenu.tscn" id="4_jqf55"]

[node name="UI" type="Node"]
process_mode = 3
script = ExtResource("1_ddrgo")

[node name="BGCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" parent="BGCanvasLayer" instance=ExtResource("2_d050y")]

[node name="OverlayCanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerOverlay" type="Control" parent="OverlayCanvasLayer"]
custom_minimum_size = Vector2(1152, 720)
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -360.0
offset_right = 576.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthOverlay" parent="OverlayCanvasLayer/PlayerOverlay" instance=ExtResource("3_d050y")]
layout_mode = 1

[node name="HelpOverlay" parent="OverlayCanvasLayer/PlayerOverlay" instance=ExtResource("4_d050y")]
layout_mode = 1

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="MenuCanvasLayer" instance=ExtResource("4_byuxr")]
visible = false

[node name="CreditsMenu" parent="MenuCanvasLayer" instance=ExtResource("4_jqf55")]
visible = false

[node name="HelpMenu" parent="MenuCanvasLayer" instance=ExtResource("4_f1fl4")]
visible = false

[node name="GameOverMenu" parent="MenuCanvasLayer" instance=ExtResource("4_e707p")]
visible = false

[connection signal="help_pressed" from="OverlayCanvasLayer/PlayerOverlay/HelpOverlay" to="." method="_on_help_overlay_help_pressed"]
[connection signal="credits_pressed" from="MenuCanvasLayer/MainMenu" to="." method="_on_main_menu_credits_pressed"]
[connection signal="help_pressed" from="MenuCanvasLayer/MainMenu" to="." method="_on_main_menu_help_pressed"]
[connection signal="quit_pressed" from="MenuCanvasLayer/MainMenu" to="." method="_on_main_menu_quit_pressed"]
[connection signal="restart_pressed" from="MenuCanvasLayer/MainMenu" to="." method="_on_main_menu_restart_pressed"]
[connection signal="close_pressed" from="MenuCanvasLayer/CreditsMenu" to="." method="_on_credits_menu_close_pressed"]
[connection signal="close_pressed" from="MenuCanvasLayer/HelpMenu" to="." method="_on_help_menu_close_pressed"]
[connection signal="quit_pressed" from="MenuCanvasLayer/GameOverMenu" to="." method="_on_game_over_menu_quit_pressed"]
[connection signal="restart_pressed" from="MenuCanvasLayer/GameOverMenu" to="." method="_on_game_over_menu_restart_pressed"]
